change size of picture in Pasta

--- a/Pasta.html
+++ b/Pasta.html
@@ -11,6 +11,7 @@
     <img
       src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F837215.jpg"
       alt="tomato-garlic-pasta"
+      width="50%"
     />
     <h2>Description</h2>
     <p>
